--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,15 @@ body {
 }
 
 header {
-    background: rgba(255, 253, 253, 0.9);
+    background: rgba(255, 255, 255, 0.9);
     backdrop-filter: blur(8px);
+    margin: 5px 5px;
     padding: 5px;
     display: flex;
     align-items: center;
     position: fixed;
     width: 100%;
+    height: 50px;
     top: 0;
     left: 0;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
@@ -104,6 +106,80 @@ header h1 {
 .self-assessment ul li:hover,
 .self-assessment ol li:hover {
     background: #e9ecef;
+}
+
+#overview-container {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background: white;
+    padding: 10px;
+    margin-top: 60px;
+    border-radius: 8px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+#artifact-container {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background: white;
+    padding: 10px;
+    margin-top: 60px;
+    border-radius: 8px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.text-area {
+    flex: 1;
+    padding-right: 20px;
+}
+
+.text-area h2 {
+    margin-bottom: 10px;
+    font-size: 1.5rem;
+}
+
+.text-area p {
+    font-size: 1rem;
+    color: #333;
+    text-align: left;
+    padding: 5px;
+}
+
+
+.divider {
+    width: 2px;
+    background-color: #080404;
+    height: 100px;
+}
+
+.video-area {
+    flex: 1;
+    padding-left: 20px;
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .divider {
+        width: 100%;
+        height: 2px;
+        margin: 20px 0;
+    }
+
+    .text-area,
+    .video-area {
+        padding: 0;
+        text-align: center;
+    }
 }
 
 @media (max-width: 768px) {
