--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ header h1 {
     width: 100%;
     background: white;
     padding: 10px;
-    margin-top: 60px;
+    margin-top: 65px;
     border-radius: 8px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
@@ -130,8 +130,21 @@ header h1 {
     width: 100%;
     background: white;
     padding: 10px;
-    margin-top: 60px;
     border-radius: 8px;
+    margin-top: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.enh-container {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background: white;
+    padding: 10px;
+    border-radius: 8px;
+    margin-top: 10px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
